--- a/HTML5Course.html
+++ b/HTML5Course.html
@@ -63,7 +63,7 @@
 
 <body>
     <img src="BCK.png" alt="Nothing">
-        <h1>HTML 5</h1>
+        <h1>HTML 5 by Tanishq Jadhav</h1>
         <section class="First">
             <p> HTML stands for Hyper Text Markup Language. It is used to design web pages using a markup language. HTML
                 is
